<resources>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_back">Back</string>
    <string name="action_share">Share</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_import_fromtheme">Copy from Theme</string>
    <string name="action_overflow">Menu</string>
    <string name="action_seasons">Seasons</string>
    <string name="action_today">Today</string>
    <string name="action_date_solstice_winter">Winter</string>
    <string name="action_date_solstice_summer">Summer</string>
    <string name="action_date_equinox_autumn">Autumn</string>
    <string name="action_date_equinox_spring">Spring</string>
    <string name="action_timezone_system_format">(%s)</string>
    <string name="action_timezone_system">System %s</string>
    <string name="action_timezone_suntimes">Suntimes %s</string>
    <string name="action_timezone_localmean">@string/solartime_localmean</string>
    <string name="action_timezone_apparentsolar">@string/solartime_apparent</string>
    <string name="action_timezone_utc">@string/solartime_utc</string>
    <string name="action_timezone_italian">Italic</string>
    <string name="action_timezone_italian_civil">Italian Civil</string>
    <string name="action_timezone_babylonian">Babylonian</string>
    <string name="action_timezone_julian">Julian</string>
    <string name="solartime_localmean">Local Mean Time</string>
    <string name="solartime_apparent">Apparent Solar Time</string>
    <string name="solartime_utc">UTC</string>
    <string name="action_timeformat_system_format">(%s)</string>
    <string name="action_timeformat_system">System %s</string>
    <string name="action_timeformat_suntimes">Suntimes %s</string>
    <string name="action_timeformat_6hr">@string/timeformat_6hr</string>
    <string name="action_timeformat_12hr">@string/timeformat_12hr</string>
    <string name="action_timeformat_24hr">@string/timeformat_24hr</string>
    <string name="timeformat_6hr">6-hour</string>
    <string name="timeformat_12hr">12-hour</string>
    <string name="timeformat_24hr">24-hour</string>
    <string name="action_add_seconds">seconds</string>
    <string name="action_add_minutes">minutes</string>
    <string name="action_add_hours">hours</string>
    <string name="action_add_days">days</string>
    <string name="action_select">Select</string>
    <string name="action_alarms">Set Alarm</string>
    <string name="action_colors">Colors</string>
    <string name="action_colors_dark">Dark Colors</string>
    <string name="action_colors_light">Light Colors</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="action_fullscreen_off">Disable Fullscreen</string>
    <string name="action_settings">Options</string>
    <string name="action_onlineHelp">Online Help</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_widget">Widget</string>
    <string name="pref_category_clockface">Clock face</string>
    <string name="pref_category_orientation">Clock Orientation</string>
    <string name="pref_category_nightwatch">Night Watch</string>
    <string name="pref_category_theme">Theme</string>
    <string name="pref_category_animation">Animations</string>
    <string name="pref_category_daydream">Daydream</string>
    <string name="pref_title_midnight_top">Midnight at top</string>
    <string name="pref_title_center_noon">Center on solar noon</string>
    <string name="pref_title_show_noon">Show solar noon</string>
    <string name="pref_title_show_date">Show date</string>
    <string name="pref_title_show_timezone">Show time zone</string>
    <string name="pref_title_show_location">Show location</string>
    <string name="pref_title_show_night">Show night period</string>
    <string name="pref_title_show_midnight">Show solar midnight</string>
    <string name="pref_title_show_twilights">Show twilight periods</string>
    <string name="pref_title_show_ampm">Show am/pm periods</string>
    <string name="pref_title_show_nightwatch">Show night watches</string>
    <string name="pref_title_show_ticks5m">Show ticks (5 minutes)</string>
    <string name="pref_title_show_ticks15m">Show ticks (15 minutes)</string>
    <string name="pref_title_show_plate">Show background plate</string>
    <string name="pref_title_show_seconds">Show seconds hand</string>
    <string name="pref_title_bgmode">Background</string>
    <string-array name="pref_bgmode_display">
        <item>App theme</item>
        <item>Black</item>
        <item>Clock colors</item>
        <item>Home screen wallpaper</item>
    </string-array>
    <string-array name="pref_bgmode_values" translatable="false">  
        <item>0</item>   
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_bgmode_daydream_display">
        <item>Black</item>
        <item>Clock colors</item>
    </string-array>
    <string-array name="pref_bgmode_daydream_values" translatable="false">  
        <item>3</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_hourdef">Hours begin</string>
    <string-array name="pref_hourdef_display">
        <item>at sunrise &amp; sunset&#160;(12)</item>
        <item>at civil&#160;dawn &amp; civil&#160;dusk&#160;(12)</item>
        <item>at civil&#160;dawn(24)</item>
        <item>at sunrise&#160;(24)</item>
        <item>at noon&#160;(24)</item>
        <item>at sunset&#160;(24)</item>
        <item>at civil&#160;dusk&#160;(24)</item>
    </string-array>
    <string-array name="pref_hourdef_values" translatable="false">  
        <item>0</item>   
        <item>1</item>
        <item>6</item>
        <item>3</item>
        <item>4</item>
        <item>2</item>
        <item>5</item>
    </string-array>
    <string-array name="hourdef_symbols" translatable="false">  
        <item>↑↓</item>    
        <item>↑↑↓↓</item>  
        <item>↓</item>     
        <item>↑</item>     
        <item>~</item>     
        <item>↓↓</item>    
        <item>↑↑</item>    
    </string-array>
    <string name="pref_title_timeformat">Time Format</string>
    <string-array name="pref_timeformat_display">
        <item>@string/action_timeformat_system</item>     
        <item>@string/action_timeformat_suntimes</item>   
        <item>@string/timeformat_6hr</item>               
        <item>@string/timeformat_12hr</item>              
        <item>@string/timeformat_24hr</item>              
    </string-array>
    <string-array name="pref_timeformat_values" translatable="false">  
        <item>0</item>   
        <item>1</item>
        <item>4</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_tzmode">Time Zone</string>
    <string-array name="pref_tzmode_display">
        <item>@string/action_timezone_system</item>           
        <item>@string/action_timezone_suntimes</item>         
        <item>@string/action_timezone_localmean</item>        
        <item>@string/action_timezone_apparentsolar</item>    
        <item>@string/action_timezone_utc</item>              
        <item>@string/action_timezone_babylonian</item>       
        <item>@string/action_timezone_italian</item>          
        <item>@string/action_timezone_italian_civil</item>    
        <item>@string/action_timezone_julian</item>           
    </string-array>
    <string-array name="pref_tzmode_values" translatable="false">  
        <item>0</item>   
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>7</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
    </string-array>
    <string name="pref_title_nightwatch_type">Night Watch</string>
    <string-array name="pref_nightwatch_display">
        <item>2 watches</item>
        <item>3 watches</item>
        <item>4 watches</item>
        <item>5 watches</item>
        <item>6 watches</item>
        <item>7 watches</item>
        <item>8 watches</item>
        <item>9 watches</item>
        <item>10 watches</item>
        <item>11 watches</item>
    </string-array>
    <string-array name="pref_nightwatch_values" translatable="false">  
        <item>2</item>
        <item>3</item>
        <item>4</item>   
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="pref_title_numerals">Numerals</string>
    <string-array name="pref_numerals_display">
        <item>Attic</item>
        <item>Armenian</item>
        <item>Etruscan</item>
        <item>Greek (uppercase)</item>
        <item>Greek (lowercase)</item>
        <item>Hebrew</item>
        <item>Localized</item>
        <item>Roman</item>
        <item>Western Arabic</item>
    </string-array>
    <string-array name="pref_numerals_values" translatable="false">  
        <item>2</item>   
        <item>7</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>3</item>
        <item>100</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_action">On Tap</string>
    <string-array name="pref_action_display">
        <item>Do Nothing</item>
        <item>Update Widget</item>
        <item>Reconfigure Widget</item>
        <item>Launch App</item>
    </string-array>
    <string-array name="pref_action_values" translatable="false">  
        <item>0</item>   
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_daydream_fullscreen">Fullscreen</string>
    <string name="pref_title_daydream_interactive">Touch interactions</string>
    <string name="pref_title_daydream_screenbright">Keep screen bright</string>
    <string name="format_announcement">%1$s\n%2$s</string>
    <string name="format_announcement_clocktime">%1$s %2$s</string>
    <string name="format_announcement_naturalhour">%1$s (%2$s)</string>
    <string name="format_announcement_timezone">(%s)</string>
    <string name="format_time6">h:mm</string>
    <string name="format_time6_withseconds">h:mm:ss</string>
    <string name="format_date0">MMMM d</string>
    <string name="format_date0_long">MMMM d, yyyy</string>
    <string name="format_date">MMMM d\nEEEE</string>
    <string name="format_date_long">MMMM d, yyyy\nEEEE</string>
    <string name="format_location">%1$s, %2$s</string>
    <string name="format_location_long">%1$s, %2$s %3$s</string>
    <string name="format_location_altitude">%1$s%2$s</string>
    <string name="format_tag">[%1$s]</string>
    <string name="format_summary_minutes">%s minutes</string>
    <string name="format_help"><![CDATA[%1$s<br/><br/>%2$s]]></string>
    <string name="units_feet">feet</string>
    <string name="units_feet_short">ft</string>
    <string name="units_meters">meters</string>
    <string name="units_meters_short">m</string>
    <string name="format_date_past">Past (-%1$s)\n%2$s</string>
    <string name="format_date_yesterday">Yesterday\n%2$s</string>
    <string name="format_date_today">Today\n%1$s</string>
    <string name="format_date_tomorrow">Tomorrow\n%2$s</string>
    <string name="format_date_future">Future (+%1$s)\n%2$s</string>
</resources>