<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_theme">

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference android:key="widget_0_backgroundMode"
            android:title="@string/pref_title_bgmode"
            android:entries="@array/pref_bgmode_daydream_display"
            android:entryValues="@array/pref_bgmode_daydream_values"
            android:defaultValue="3"
            android:summary="%s" />

        <com.forrestguice.suntimes.naturalhour.ui.colors.ColorValuesCollectionPreference
            android:key="widget_0_colors" android:persistent="false"
            android:title="@string/action_colors" app:appWidgetID="-100"
            android:summary="%s"
            app:showAlpha="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_daydream">

        <CheckBoxPreference android:key="widget_0_fullscreen"
            android:title="@string/pref_title_daydream_fullscreen" android:defaultValue="@bool/daydream_fullscreen" />

        <CheckBoxPreference android:key="widget_0_screenbright"
            android:title="@string/pref_title_daydream_screenbright" android:defaultValue="@bool/daydream_screenbright" />

        <CheckBoxPreference android:key="widget_0_interactive"
            android:title="@string/pref_title_daydream_interactive" android:defaultValue="@bool/daydream_interactive" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_animation">

        <com.forrestguice.suntimes.naturalhour.ui.TimeOffsetPickerPreference
            android:key="widget_0_anim_bgpulse_duration"
            android:title="Background Pulse (duration)"
            android:summary="%s"
            app:minValue="0"
            app:maxValue="60000"
            app:allowPickSeconds="true"
            android:defaultValue="15000"
            app:resetDefaultsValue="15000"
            app:resetDefaultsText="Restore Defaults" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_general">

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference
            android:key="widget_0_clockface_hourmode"
            android:title="@string/pref_title_hourdef"
            android:entries="@array/pref_hourdef_display"
            android:entryValues="@array/pref_hourdef_values"
            android:defaultValue="@integer/clockface_hourmode"
            android:summary="%s" />

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference android:key="widget_0_timeformatmode"
            android:title="@string/pref_title_timeformat"
            android:entries="@array/pref_timeformat_display"
            android:entryValues="@array/pref_timeformat_values"
            android:defaultValue="3"
            android:summary="%s" />

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference android:key="widget_0_timezonemode"
            android:title="@string/pref_title_tzmode"
            android:entries="@array/pref_tzmode_display"
            android:entryValues="@array/pref_tzmode_values"
            android:defaultValue="@integer/daydream_tzmode"
            android:summary="%s" />

        <CheckBoxPreference android:key="widget_0_clockface_showSeconds"
            android:title="@string/pref_title_show_seconds" android:defaultValue="@bool/daydream_show_seconds" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_orientation">

        <CheckBoxPreference android:key="widget_0_clockface_startAtTop"
            android:title="@string/pref_title_midnight_top" android:defaultValue="@bool/clockface_start_at_top" />

        <CheckBoxPreference android:key="widget_0_clockface_centerNoon"
            android:title="@string/pref_title_center_noon" android:defaultValue="@bool/clockface_center_noon" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_nightwatch">

        <CheckBoxPreference android:key="widget_0_clockface_showVigilia"
            android:title="@string/pref_title_show_nightwatch" android:defaultValue="@bool/clockface_show_vigilia" />

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference
            android:key="widget_0_clockface_nightwatchType"
            android:title="@string/pref_title_nightwatch_type"
            android:entries="@array/pref_nightwatch_display"
            android:entryValues="@array/pref_nightwatch_values"
            android:defaultValue="@integer/clockface_nightwatch_type"
            android:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_clockface">

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference
            android:key="widget_0_clockface_numerals"
            android:title="@string/pref_title_numerals"
            android:entries="@array/pref_numerals_display"
            android:entryValues="@array/pref_numerals_values"
            android:defaultValue="@integer/clockface_numerals"
            android:summary="%s" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundPlate"
            android:title="@string/pref_title_show_plate" android:defaultValue="@bool/clockface_show_background_plate" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundAmPm"
            android:title="@string/pref_title_show_ampm" android:defaultValue="@bool/clockface_show_background_ampm" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundTwilights"
            android:title="@string/pref_title_show_twilights" android:defaultValue="@bool/clockface_show_background_twilights" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundNight"
            android:title="@string/pref_title_show_night" android:defaultValue="@bool/clockface_show_background_night" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundMidnight"
            android:title="@string/pref_title_show_midnight" android:defaultValue="@bool/clockface_show_background_midnight" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundNoon"
            android:title="@string/pref_title_show_noon" android:defaultValue="@bool/clockface_show_background_noon" />

        <CheckBoxPreference android:key="widget_0_clockface_showDate"
            android:title="@string/pref_title_show_date" android:defaultValue="@bool/clockface_show_date" />

        <CheckBoxPreference android:key="widget_0_clockface_showTimeZone"
            android:title="@string/pref_title_show_timezone" android:defaultValue="@bool/clockface_show_timezone" />

        <CheckBoxPreference android:key="widget_0_clockface_showLocation"
            android:title="@string/pref_title_show_location" android:defaultValue="@bool/clockface_show_location" />

        <CheckBoxPreference android:key="widget_0_clockface_showTick15m"
            android:title="@string/pref_title_show_ticks15m" android:defaultValue="@bool/clockface_show_ticks_15m" />

        <CheckBoxPreference android:key="widget_0_clockface_showTick5m"
            android:title="@string/pref_title_show_ticks5m" android:defaultValue="@bool/clockface_show_ticks_5m" />

    </PreferenceCategory>

</PreferenceScreen>
