<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_general">

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference
            android:key="widget_0_clockface_hourmode"
            android:title="@string/pref_title_hourdef"
            android:entries="@array/pref_hourdef_display"
            android:entryValues="@array/pref_hourdef_values"
            android:defaultValue="@integer/clockface_hourmode"
            android:summary="%s" />

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference android:key="widget_0_timeformatmode"
            android:title="@string/pref_title_timeformat"
            android:entries="@array/pref_timeformat_display"
            android:entryValues="@array/pref_timeformat_values"
            android:defaultValue="3"
            android:summary="%s" />

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference android:key="widget_0_timezonemode"
            android:title="@string/pref_title_tzmode"
            android:entries="@array/pref_tzmode_display"
            android:entryValues="@array/pref_tzmode_values"
            android:defaultValue="3"
            android:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_orientation">

        <CheckBoxPreference android:key="widget_0_clockface_startAtTop"
            android:title="@string/pref_title_midnight_top" android:defaultValue="@bool/clockface_start_at_top" />

        <CheckBoxPreference android:key="widget_0_clockface_centerNoon"
            android:title="@string/pref_title_center_noon" android:defaultValue="@bool/clockface_center_noon" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_nightwatch">

        <CheckBoxPreference android:key="widget_0_clockface_showVigilia"
            android:title="@string/pref_title_show_nightwatch" android:defaultValue="@bool/clockface_show_vigilia" />

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference
            android:key="widget_0_clockface_nightwatchType"
            android:title="@string/pref_title_nightwatch_type"
            android:entries="@array/pref_nightwatch_display"
            android:entryValues="@array/pref_nightwatch_values"
            android:defaultValue="@integer/clockface_nightwatch_type"
            android:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_clockface">

        <com.forrestguice.suntimes.naturalhour.ui.IntListPreference
            android:key="widget_0_clockface_numerals"
            android:title="@string/pref_title_numerals"
            android:entries="@array/pref_numerals_display"
            android:entryValues="@array/pref_numerals_values"
            android:defaultValue="@integer/clockface_numerals"
            android:summary="%s" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundPlate"
            android:title="@string/pref_title_show_plate" android:defaultValue="@bool/clockface_show_background_plate" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundAmPm"
            android:title="@string/pref_title_show_ampm" android:defaultValue="@bool/clockface_show_background_ampm" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundTwilights"
            android:title="@string/pref_title_show_twilights" android:defaultValue="@bool/clockface_show_background_twilights" />

        <CheckBoxPreference android:key="widget_0_clockface_showBackgroundNight"
            android:title="@string/pref_title_show_night" android:defaultValue="@bool/clockface_show_background_night" />

        <CheckBoxPreference android:key="widget_0_clockface_showDate"
            android:title="@string/pref_title_show_date" android:defaultValue="@bool/clockface_show_date" />

        <CheckBoxPreference android:key="widget_0_clockface_showTimeZone"
            android:title="@string/pref_title_show_timezone" android:defaultValue="@bool/clockface_show_timezone" />

        <CheckBoxPreference android:key="widget_0_clockface_showLocation"
            android:title="@string/pref_title_show_location" android:defaultValue="@bool/clockface_show_location" />

        <CheckBoxPreference android:key="widget_0_clockface_showTick15m"
            android:title="@string/pref_title_show_ticks15m" android:defaultValue="@bool/clockface_show_ticks_15m" />

        <CheckBoxPreference android:key="widget_0_clockface_showTick5m"
            android:title="@string/pref_title_show_ticks5m" android:defaultValue="@bool/clockface_show_ticks_5m" />

    </PreferenceCategory>

</PreferenceScreen>
