<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_clockface">

        <CheckBoxPreference android:key="clockface_startAtTop"
            android:title="@string/pref_title_midnight_top" android:defaultValue="true" />

        <CheckBoxPreference android:key="clockface_showDate"
            android:title="@string/pref_title_show_date" android:defaultValue="true" />

        <CheckBoxPreference android:key="clockface_showTimeZone"
            android:title="@string/pref_title_show_timezone" android:defaultValue="true" />

        <CheckBoxPreference android:key="clockface_showBackgroundAmPm"
            android:title="@string/pref_title_show_ampm" android:defaultValue="true" />

        <CheckBoxPreference android:key="clockface_showBackgroundNight"
            android:title="@string/pref_title_show_night" android:defaultValue="true" />

        <CheckBoxPreference android:key="clockface_showBackgroundTwilights"
            android:title="@string/pref_title_show_twilights" android:defaultValue="true" />

        <CheckBoxPreference android:key="clockface_showVigilia"
            android:title="@string/pref_title_show_vigilia" android:defaultValue="false" />

    </PreferenceCategory>


</PreferenceScreen>
