<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.forrestguice.suntimes.naturalhour.MainActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_timezone_system"
            android:orderInCategory="100"
            android:title="@string/action_timezone_system"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_suntimes"
            android:orderInCategory="200"
            android:title="@string/action_timezone_suntimes"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_localmean"
            android:orderInCategory="300"
            android:title="@string/action_timezone_localmean"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_apparentsolar"
            android:orderInCategory="400"
            android:title="@string/action_timezone_apparentsolar"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_utc"
            android:orderInCategory="500"
            android:title="@string/action_timezone_utc"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_italian"
            android:orderInCategory="600"
            android:title="@string/action_timezone_italian"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_italian_civil"
            android:orderInCategory="600"
            android:title="@string/action_timezone_italian_civil"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_babylonian"
            android:orderInCategory="700"
            android:title="@string/action_timezone_babylonian"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_timezone_julian"
            android:orderInCategory="800"
            android:title="@string/action_timezone_julian"
            app:showAsAction="never" />

    </group>

</menu>
