<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.forrestguice.suntimes.naturalhour.MainActivity">

    <item
        android:id="@+id/action_alarms"
        android:orderInCategory="600"
        android:icon="?attr/icAlarms"
        android:title="@string/action_alarms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_colors"
        android:orderInCategory="600"
        android:icon="?attr/icColors"
        android:title="@string/action_colors"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="700"
        android:icon="?attr/icSettings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="800"
        android:icon="?attr/icHelp"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="900"
        android:icon="?attr/icAbout"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
